--- a/src/styles/layouts.styl
+++ b/src/styles/layouts.styl
@@ -20,3 +20,4 @@ flex()
     padding: var(--min-padding, 1.5em)
     background-color: var(--color-fill, transparent)
     color: var(--color-text, currentColor)
+    border-radius: var(--radius, 0)
