--- a/src/styles/layouts.styl
+++ b/src/styles/layouts.styl
@@ -16,7 +16,7 @@ flex()
     flex()
     justify-content: space-between
 
-.box
+:is(.blank-box, .box)
     padding: var(--min-padding, 1.5em)
     background-color: var(--color-fill, transparent)
     color: var(--color-text, currentColor)
